se actualizan endpoints de clientes empleados, login y productos